--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,10 @@
 
 	<groupId>com.mycompany</groupId>
 	<artifactId>prjexchangestudio</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT-MASS</version>
 	<packaging>mule-application</packaging>
 
-	<name>prjexchangestudio</name>
+	<name>prjLocalRepository</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -29,6 +29,9 @@
 				<artifactId>mule-maven-plugin</artifactId>
 				<version>${mule.maven.plugin.version}</version>
 				<extensions>true</extensions>
+				<configuration>
+					<classifier>mule-application</classifier>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
